[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/furniture/obiekty/palnik.png" type="Texture" id=1]
[ext_resource path="res://World/furniture/obiekty/piekarnik1.png" type="Texture" id=2]
[ext_resource path="res://World/furniture/Slot/Slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/furniture/obiekty/Smazenie.gd" type="Script" id=4]

[node name="Smazenie" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 421, 366 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="palnik" type="Sprite" parent="Node2D"]
position = Vector2( 404, 235 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_left = 287.0
margin_top = 157.0
margin_right = 502.0
margin_bottom = 254.0
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="Timer" type="Timer" parent="Node2D"]

[node name="Slot24" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 170.0
margin_right = 432.0
margin_bottom = 240.0

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 245.0
margin_top = 352.0
margin_right = 269.0
margin_bottom = 376.0
rect_scale = Vector2( 3, 3 )

[connection signal="timeout" from="Node2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
